fix 1.6 + add 1.7 -> 1.9